adding page home Structural Relates #1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="main_div">
+        <h1>Todo App</h1>
+        
+        <form>
+            <input type="text" id="write_new" placeholder=" App your new todo">
+            <button id="btn_Add">+</button>
+        </form>
 
+
+        <div id="list"></div>
+
+
+       <div class="foo">
+        <p id="p">You have <span id="num_list">0</span> pending tasks</p>
+        <button id="clear">Clear All</button>
+       </div>
+    </div>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
