modified css file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="main_div">
         <h1>Todo App</h1>
         
-        <form>
+        <form class="form">
             <input type="text" id="write_new" placeholder=" App your new todo">
-            <button id="btn_Add">+</button>
+            <button id="btn_Add">Add</button>
         </form>
 
 
