modified css html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <form class="form">
             <input type="text" id="write_new" placeholder=" App your new todo">
-            <button id="btn_Add">Add</button>
+            <button id="btn_Add">+</button>
         </form>
 
 
